# lvgl-simulator-qt

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/gui_demo/: CMakeLists.txt  gui_demo_main.cpp  gui_demo_main.h
apps/gui_demo/common/: LvObject.cpp  LvObject.h
apps/screen/: CMakeLists.txt  ScreenWidget.cpp  ScreenWidget.h  main.cpp
lvgl/: CMakeLists.txt
lvgl/port/: CMakeLists.txt  LvglScreen.cpp  LvglScreen.h  LvglScreenWrapper.cpp  LvglScreenWrapper.h  lv_conf.h  lv_port_disp.c  lv_port_fs.c  lv_port_indev.c
